objects/MDCS_Troubleshooting_Checklist__c.object
<CustomObject><fields>
        <fullName>Accounts_configured_with_AD__c</fullName>
        <description>capture if the account is configured with AD for the MDCS Escalation</description>
        <inlineHelpText>capture if the account is configured with AD for the MDCS Escalation</inlineHelpText>
        <label>Accounts configured with AD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Additional_Notes__c</fullName>
        <description>Notes for configuration and environment for MDCS Escalation</description>
        <inlineHelpText>Notes for configuration and environment for MDCS Escalation</inlineHelpText>
        <label>Additional Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>All_Computers_on_same_domain__c</fullName>
        <description>Are all the computers on the same domain for the MDCS Escalation</description>
        <inlineHelpText>Are all the computers on the same domain for the MDCS Escalation</inlineHelpText>
        <label>All Computers on same domain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Automated_Validation__c</fullName>
        <description>Capture if the MDCS has automated validation</description>
        <inlineHelpText>Capture if the MDCS has automated validation</inlineHelpText>
        <label>Automated Validation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Failed – Step 1: Connection Test</fullName>
                </value>
                <value>
                    <fullName>Failed – Step 2: Job Test</fullName>
                </value>
                <value>
                    <fullName>Failed – Step 3: SPMD Job Test</fullName>
                </value>
                <value>
                    <fullName>Failed – Step 4: Pool job test</fullName>
                </value>
                <value>
                    <fullName>Failed – Step 5: Parpool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>MDCS_Escalations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Cluster_Location__c</fullName>
        <description>Capture the Cluster Location of an MDCS Escalation</description>
        <inlineHelpText>Capture the Cluster Location of an MDCS Escalation</inlineHelpText>
        <label>Cluster Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Cluster_OS__c</fullName>
        <description>Capture the Cluster OS of the MDCS Escalation</description>
        <inlineHelpText>Capture the Cluster OS of the MDCS Escalation</inlineHelpText>
        <label>Cluster OS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Operating_System</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Cluster_Platform__c</fullName>
        <description>Capture the Cluster Platform of the MDCS Escalation</description>
        <inlineHelpText>Capture the Cluster Platform of the MDCS Escalation</inlineHelpText>
        <label>Cluster Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Platform</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Connectivity_test_in_Admin_Center__c</fullName>
        <description>Capture if the MDCS completed connectivity test in admin center</description>
        <inlineHelpText>Capture if the MDCS completed connectivity test in admin center</inlineHelpText>
        <label>Connectivity test in Admin Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Count_of_Worker_Nodes__c</fullName>
        <description>Number of worker node for the MDCS Escalaion</description>
        <inlineHelpText>Number of worker node for the MDCS Escalaion</inlineHelpText>
        <label>Count of Worker Nodes</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Count_of_Workers__c</fullName>
        <description>Number of workers for the MDCS Escalation</description>
        <inlineHelpText>Number of workers for the MDCS Escalation</inlineHelpText>
        <label>Count of Workers</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Details_screen_info_attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if the Details screen is attached to the MDCS Escalation</description>
        <inlineHelpText>Indicate if the Details screen is attached to the MDCS Escalation</inlineHelpText>
        <label>Details screen info attached</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>MATLAB_release__c</fullName>
        <description>Capture the MATLAB release</description>
        <inlineHelpText>Capture the MATLAB release</inlineHelpText>
        <label>MATLAB release</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>MDCS_Installed_Licensed__c</fullName>
        <description>capture if the MDCS is installed and licensed</description>
        <inlineHelpText>capture if the MDCS is installed and licensed</inlineHelpText>
        <label>MDCS Installed &amp; Licensed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>MDCS_Release__c</fullName>
        <description>Capture the release of MDCS for the MDCS Escalation</description>
        <inlineHelpText>Capture the release of MDCS for the MDCS Escalation</inlineHelpText>
        <label>MDCS Release</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ML_PCT_Installed__c</fullName>
        <description>capture if the MDCS was ML &amp; PCT installed</description>
        <inlineHelpText>capture if the MDCS was ML &amp; PCT installed</inlineHelpText>
        <label>ML &amp; PCT Installed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Manual_Validation_Results_attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate is the validation results are attached to the MDCS Escalation</description>
        <inlineHelpText>Indicate is the validation results are attached to the MDCS Escalation</inlineHelpText>
        <label>Manual Validation Results attached</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Manual_Validation__c</fullName>
        <description>Capture if the MDCS has manual validation</description>
        <inlineHelpText>Capture if the MDCS has manual validation</inlineHelpText>
        <label>Manual Validation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Failed_Independent_Job</fullName>
                </value>
                <value>
                    <fullName>Failed – SPMD Job</fullName>
                </value>
                <value>
                    <fullName>Failed – Parpool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Ping_Fully_Qualified_Hostname2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for MDCS Escalation</description>
        <label>Ping Fully Qualified Hostname</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Ping_Fully_Qualified_Hostname3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for MDCS Escalations</description>
        <label>Ping Fully Qualified Hostname</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Ping_Fully_Qualified_Hostname__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for MDCS Escalation</description>
        <label>Ping Fully Qualified Hostname</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Ping_IP_Address2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for MDCS Escalation</description>
        <label>Ping IP Address</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Ping_IP_Address3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for MDCS Escalation</description>
        <label>Ping IP Address</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Ping_IP_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for MDCS Escalation</description>
        <label>Ping IP Address</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Ping_Short_Hostname2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for MDCS Escalation</description>
        <label>Ping Short Hostname</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Ping_Short_Hostname3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for MDCS Escalation</description>
        <label>Ping Short Hostname</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Ping_Short_Hostname__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for MDCS Escalation</description>
        <label>Ping Short Hostname</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Run_Test_Connectivity_in_Admin_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for MDCS</description>
        <label>Run Test Connectivity in Admin Center</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Scheduler__c</fullName>
        <description>to capture the Scheduler for an MDCS Escalation</description>
        <inlineHelpText>to capture the Scheduler for an MDCS Escalation</inlineHelpText>
        <label>Scheduler</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scheduler</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Submission_Node_Location__c</fullName>
        <description>Capture the submission node location of the MDCS Escalation</description>
        <inlineHelpText>Capture the submission node location of the MDCS Escalation</inlineHelpText>
        <label>Submission Node Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Within Cluster</fullName>
                </value>
                <value>
                    <fullName>Outside Cluster</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Submission_OS__c</fullName>
        <description>Capture the Submission OS of the MDCS Escalation</description>
        <inlineHelpText>Capture the Submission OS of the MDCS Escalation</inlineHelpText>
        <label>Submission OS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Operating_System</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Submission_Platform__c</fullName>
        <description>Capture the platform of the MDCS Escalation</description>
        <inlineHelpText>Capture the platform of the MDCS Escalation</inlineHelpText>
        <label>Submission Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Platform</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Test_Between_Cluster_Nodes__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>===Test Between Cluster Nodes===</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Test_Between_Sub_Worker_Nodes__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>===Test Between Sub/Worker Nodes===</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Test_Between_Submission_Head_Node__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>===Test Between Submission/Head Node===</label>
        <type>Text</type>
    </fields><fields>
        <fullName>more_info_MDCS_link1__c</fullName>
        <formula>HYPERLINK("http://www.mathworks.com/matlabcentral/answers/311099-why-does-parpool-fail-validation-on-my-client-node-when-using-an-mdcs-cluster", "ARTICLE")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>more info</label>
        <type>Text</type>
    </fields><fields>
        <fullName>more_info_MDCS_link2__c</fullName>
        <formula>HYPERLINK("https://www.mathworks.com/matlabcentral/answers/310163", "ARTICLE")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>more info</label>
        <type>Text</type>
    </fields><fields>
        <fullName>more_info_MDCS_link3__c</fullName>
        <formula>HYPERLINK("http://www.mathworks.com/matlabcentral/answers/307175", "ARTICLE")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>more info</label>
        <type>Text</type>
    </fields><fields>
        <fullName>output_txt_from_dmlworker_attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if the output.txt file is attached</description>
        <inlineHelpText>Indicate if the output.txt file is attached</inlineHelpText>
        <label>output.txt from dmlworker attached</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ver_attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ver attached</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>for capturing info when the Case is for MDCS</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>MDCS Troubleshooting Checklist</label><nameField>
        <label>Checklist Name</label>
        <type>Text</type>
    </nameField><pluralLabel>MDCS Troubleshooting Checklists</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>